--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,62 +6,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.asier.cebanc_burger.MainActivity">
 
-    <TextView
-        android:text="@string/bienvenido"
-        android:textSize="30dp"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs5"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="91dp"
-        android:layout_marginStart="91dp"
-        android:layout_marginTop="30dp"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        app:srcCompat="@drawable/internet"
+        android:layout_marginStart="85dp"
+        android:id="@+id/internet"
+        android:onClick="onclickInternet"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-
-        android:drawableRight="@drawable/enter"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="33dp"
+        app:srcCompat="@drawable/enter"
         android:id="@+id/entrar"
-        android:minHeight="51dp"
+        android:onClick="onclickEntrar"
+        android:layout_marginEnd="69dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="400dp"
-        android:layout_height="300dp"
-        tools:context=".FirstMapActivity"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:text="@string/cebanc"
-        android:textSize="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="54dp"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
+        android:layout_marginTop="25dp"
+        android:id="@+id/textView4"
+        android:textSize="30sp"
+        android:layout_below="@+id/appbar"
+        android:layout_alignStart="@+id/internet"
+        android:fontFamily="sans-serif-smallcaps"
+        android:elevation="15dp"
+        android:textColor="@color/colorPrimary" />
+
+    <fragment
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_above="@+id/entrar"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:text="@string/mejor"
-        android:textSize="20dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/textView13"
+        android:layout_marginBottom="19dp"
+        android:textSize="20sp"
+        android:layout_above="@+id/map"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp" />
 
 
 </RelativeLayout>
