--- a/app/src/main/res/layout/datos_cliente.xml
+++ b/app/src/main/res/layout/datos_cliente.xml
@@ -4,49 +4,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/introduzca"
-        android:textSize="23dp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
 
-    <TextView
-        android:text="@string/nombre"
-        android:textSize="15dp"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="48dp"
-        android:id="@+id/textView5" />
+        android:layout_width="match_parent">
 
-    <TextView
-        android:text="@string/apellido"
-        android:textSize="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="41dp"
-        android:id="@+id/textView6" />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs4"
 
-    <TextView
-        android:text="@string/direccion"
-        android:textSize="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="46dp"
-        android:id="@+id/textView7" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <TextView
         android:text="@string/telefono"
@@ -59,44 +29,76 @@
         android:layout_alignRight="@+id/textView7"
         android:layout_alignEnd="@+id/textView7" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text=""
-        android:ems="10"
-        android:layout_below="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_marginTop="34dp"
-        android:id="@+id/editTextNombre"
-        android:hint="@string/nom" />
+    <ImageView
+        app:srcCompat="@drawable/entrar2"
+        android:layout_marginTop="72dp"
+        android:id="@+id/buttonSiguiente"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/editTextTelefono"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="68dp" />
 
-    <EditText
+    <TextView
+        android:text="@string/direccion"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text=""
-        android:ems="10"
-        android:layout_below="@+id/editTextNombre"
-        android:layout_alignLeft="@+id/editTextNombre"
-        android:layout_alignStart="@+id/editTextNombre"
-        android:layout_marginTop="16dp"
-        android:id="@+id/editTextApellido"
-        android:hint="@string/ape" />
+        android:id="@+id/textView7"
+        android:layout_alignBaseline="@+id/editTextDireccion"
+        android:layout_alignBottom="@+id/editTextDireccion"
+        android:layout_toStartOf="@+id/editTextDireccion"
+        android:layout_marginEnd="33dp" />
 
-    <EditText
+    <TextView
+        android:text="@string/apellido"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text=""
-        android:ems="10"
-        android:layout_below="@+id/editTextApellido"
-        android:layout_alignLeft="@+id/editTextApellido"
-        android:layout_alignStart="@+id/editTextApellido"
-        android:layout_marginTop="22dp"
-        android:id="@+id/editTextDireccion"
-        android:hint="@string/dire" />
+        android:id="@+id/textView6"
+        android:layout_alignBaseline="@+id/editTextApellido"
+        android:layout_alignBottom="@+id/editTextApellido"
+        android:layout_alignStart="@+id/textView8" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/iconousuario"
+        android:id="@+id/imageView"
+        android:layout_alignTop="@+id/editTextNombre"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/iconoubicacion"
+        android:id="@+id/imageView2"
+        android:layout_alignTop="@+id/editTextDireccion"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/iconotelefono"
+        android:id="@+id/imageView12"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/atras2"
+        android:id="@+id/buttonSalir"
+        android:layout_alignTop="@+id/buttonSiguiente"
+        android:layout_alignStart="@+id/textView8" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:srcCompat="@drawable/iconoapellido"
+        android:layout_alignTop="@+id/editTextApellido"
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageView13" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -104,30 +106,67 @@
         android:inputType="number"
         android:ems="10"
         android:maxLength="9"
-        android:layout_below="@+id/editTextDireccion"
-        android:layout_alignLeft="@+id/editTextDireccion"
-        android:layout_alignStart="@+id/editTextDireccion"
-        android:layout_marginTop="14dp"
         android:id="@+id/editTextTelefono"
-        android:hint="@string/tlf" />
+        android:hint="@string/tlf"
+        android:layout_alignBaseline="@+id/textView8"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignParentEnd="true" />
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/entrar"
-        android:id="@+id/buttonSiguiente"
-        android:layout_marginTop="93dp"
-        android:layout_below="@+id/editTextTelefono"
-        android:layout_alignEnd="@+id/editTextTelefono" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text=""
+        android:ems="10"
+        android:id="@+id/editTextDireccion"
+        android:hint="@string/dire"
+        android:layout_above="@+id/imageView12"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="16dp" />
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/atras"
-        android:id="@+id/buttonSalir"
-        android:layout_marginTop="69dp"
-        android:layout_below="@+id/editTextTelefono"
-        android:layout_toEndOf="@+id/textView5" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text=""
+        android:ems="10"
+        android:id="@+id/editTextApellido"
+        android:hint="@string/ape"
+        android:layout_above="@+id/editTextDireccion"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="19dp" />
+
+    <TextView
+        android:text="@string/nombre"
+        android:textSize="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView5"
+        android:layout_above="@+id/imageView13"
+        android:layout_alignStart="@+id/textView6"
+        android:layout_marginBottom="19dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text=""
+        android:ems="10"
+        android:id="@+id/editTextNombre"
+        android:hint="@string/nom"
+        android:layout_alignBaseline="@+id/textView5"
+        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignStart="@+id/editTextApellido" />
+
+    <TextView
+        android:text="@string/introduzca"
+        android:textSize="23dp"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_below="@+id/appbar"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
