--- a/app/src/main/res/layout/resumen.xml
+++ b/app/src/main/res/layout/resumen.xml
@@ -5,6 +5,23 @@
     android:layout_height="match_parent">
 
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs3"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -71,57 +88,54 @@
         </LinearLayout>
     </ScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:srcCompat="@android:drawable/sym_action_call"
-        android:id="@+id/btnLlamar"
-        app:backgroundTint="@android:color/holo_blue_dark"
-        app:fabSize="normal"
-        android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/facebook" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/facebook"
-        android:id="@+id/facebook"
-        app:backgroundTint="?attr/actionModeSplitBackground"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView9"
-        android:layout_marginBottom="15dp" />
-
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/carrito"
-        android:id="@+id/carrito"
-        android:layout_alignBottom="@+id/btnLlamar"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="43dp"
-        android:layout_alignTop="@+id/btnLlamar"
-        android:onClick="download"
-        android:layout_toEndOf="@+id/total" />
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_height="match_parent"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="453dp"
+        android:layout_below="@+id/appbar"
         android:layout_alignParentStart="true">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs3"
+        <Button
+            android:text="@string/salir"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:theme="@style/MyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/stop"
+            android:layout_weight="1" />
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:srcCompat="@android:drawable/sym_action_call"
+            android:id="@+id/btnLlamar"
+            app:backgroundTint="@android:color/holo_blue_dark"
+            app:fabSize="normal"
+            android:layout_alignTop="@+id/stop"
+            android:layout_toEndOf="@+id/stop"
+            android:layout_marginStart="84dp"
+            android:layout_weight="1" />
 
-    </android.support.design.widget.AppBarLayout>
+        <TextView
+            android:text=""
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView19"
+            android:layout_weight="1" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/carrito"
+            android:id="@+id/carrito"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
