--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,26 +23,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/internet"
-        android:layout_marginStart="85dp"
-        android:id="@+id/internet"
-        android:onClick="onclickInternet"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/enter"
-        android:id="@+id/entrar"
-        android:onClick="onclickEntrar"
-        android:layout_marginEnd="69dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
-
     <TextView
         android:text="@string/cebanc"
         android:layout_width="wrap_content"
@@ -74,6 +54,37 @@
         android:layout_above="@+id/map"
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/enter"
+        android:id="@+id/entrar"
+        android:onClick="onclickEntrar"
+        android:layout_marginEnd="38dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/internet"
+        android:id="@+id/internet"
+        android:onClick="onclickInternet"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView13"
+        android:layout_marginStart="19dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="normal"
+        app:srcCompat="?android:attr/actionModeWebSearchDrawable"
+        android:id="@+id/basedatos"
+        app:backgroundTint="@android:color/holo_green_light"
+        android:layout_alignTop="@+id/internet"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
