--- a/app/src/main/res/layout/datos_cliente.xml
+++ b/app/src/main/res/layout/datos_cliente.xml
@@ -168,5 +168,14 @@
         android:layout_below="@+id/appbar"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:text="@string/comprobar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/comprobar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp" />
+
 
 </RelativeLayout>
